partial app completed

--- a/app.json
+++ b/app.json
@@ -21,10 +21,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mohanprajapati001.tinder2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5ede20ef-3d9e-45e3-9400-b9f9460afed7"
+      }
+    },
+    "scheme":"tinder2"
   }
 }
