--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@firebase/auth": "^0.23.2",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/app": "^18.0.0",
@@ -27,9 +28,9 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-deck-swiper": "^2.0.14",
-    "tailwindcss": "^3.3.2",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-safe-area-context": "4.5.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
